# vision_computadora_i

TPs/tp1/: README.md  pyproject.toml  tp1.ipynb
TPs/tp2/: README.md  pyproject.toml  tp2.ipynb
TPs/tp3/: README.md  pyproject.toml  tp3.ipynb
