[project]
name = "tp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pip>=26.0.1",
    "scipy>=1.17.1",
    "supervision>=0.27.0.post2",
]
